--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,22 @@ img {
     font-size:          smaller;
 }
 
+/* PROJECTS SECTION */
+
+.projects {
+    background: #f2f2f2;
+    padding:            1em;
+    padding-bottom:     1.8em;
+    padding-left:      2em;
+    font-family:        'Montserrat', sans-serif;
+    font-family:        200;
+    font-size:          1rem;
+}
+
+.projects p {
+    font-family:        Verdana, Geneva, Tahoma, sans-serif;
+}
+
 /* FOOTER SECTION */
 
 .foot {
