--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h1 {
     padding-right:      3em;
     color:              #222;
 }
-img {
+.intro_content_img img {
     min-width:          150px;
     max-height:         200px;
     height:             auto;
@@ -125,6 +125,12 @@ img {
 .projects h2,
 .resume h2 {
     font-size: 2em;
+}
+
+.projects img {
+    width: 30%;
+    height: auto;
+    border: none;
 }
 
 /* FOOTER SECTION */
