--- a/styles.css
+++ b/styles.css
@@ -203,7 +203,7 @@ h1 {
 @media only screen and (max-width: 600px) {
     body {
         margin:         0em;}
-    img {
+        .intro_content_img img {
         float:          unset; 
         display:        block; 
         margin:         auto; 
@@ -220,10 +220,24 @@ h1 {
     h1 {
         text-align:     center; 
         padding:        0px;}
+    .truth_img_container img, 
+    .design1_container img,
+    .design2_container img,
+    .design3_container img {
+        width:          90%;
+        max-width:      90%;
+        height:         auto;
+        max-height:     none;
+    }
 }
-@media only screen and (max-width: 475px) {
+@media only screen and (max-width: 490px) {
     .intro_content_text {
         text-align:     center; }
+    .intro_content_img img {
+        float: unset;
+        display: block;
+        margin: auto;
+    }
 }
 @media only screen and (max-width: 300px) {
     .intro_content_text {
