--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,6 @@ h1 {
 .resume {
     background:         none;
     color:              #aaa;
-    margin-bottom: 100px;
 }
 #contact {
     background: #f2f2f2;
@@ -121,7 +120,7 @@ h1 {
 .resume,
 #contact {
     padding-right:      1em;
-    padding-bottom:     1.8em;
+    padding-bottom:     100px;
     padding-left:       2em;
     padding-top:        3em;
     font-family:        'Montserrat', sans-serif;
