--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ button {
     margin-left:        1em;
     text-decoration:    none;
     background:         inherit;
-    color:              rgb(235, 135, 240, 1);
+    color:              #de321f;
     font-family:        'Montserrat', sans-serif;
     font-size:          1rem;
     cursor:             pointer;
@@ -62,7 +62,7 @@ button {
 }
 
 .topnav a:active {
-    color: #00d0ff;
+    color: #d85445;
 }
 
 /* INTRO SECTION */
@@ -73,8 +73,8 @@ button {
     font-family:        'Montserrat', sans-serif;
     font-family:        200;
     font-size:          1.7rem;
-    background:         -moz-radial-gradient(center 45deg, circle closest-corner, #00d0ff 50%, #ff4de7 50%);
-    background:         -webkit-gradient(radial, center center, 10, center center, 700, from(#00d0ff), to(#ff4de7));
+    background:         -moz-radial-gradient(center 45deg, circle closest-corner, #c86f67 50%, #de321f 50%);
+    background:         -webkit-gradient(radial, center center, 10, center center, 700, from(#c86f67), to(#de321f));
 }
 .whitetext {
     color:              #f2f2f2;
@@ -114,7 +114,7 @@ h1 {
     color:              #aaa;
 }
 #contact {
-    background: #f2f2f2;
+    background:         #f2f2f2;
 }
 .projects, 
 .resume,
@@ -196,7 +196,7 @@ strong {
 .fa-envelope,
 .fa-github,
 .fa-linkedin {
-    color:              rgb(235, 135, 240, 1);
+    color:              #de321f;
     font-size:          25px;
     margin-bottom:      1em;
 }
@@ -215,7 +215,7 @@ strong {
     margin-left:        .65em;
 }
 .dl_cv{
-    background:         rgb(235, 135, 240, 1);
+    background:         #de321f;
     width:              7rem;
     height:             2rem;
     color:              #222;
