small CSS refactor

--- a/styles.css
+++ b/styles.css
@@ -101,9 +101,7 @@ h1 {
     background:         none;
     color:              #aaa;
 }
-.resume {
-    background:         #f2f2f2;
-}
+.resume,
 #contact {
     background:         #f2f2f2;
 }
